# ai-cis-rhel-playbook

./: .env  1_8_3_note  AI_DRIVEN_COMPLIANCE_SUMMARY.txt  ANALYSIS_IMPROVEMENT_SUMMARY.txt  BLOG_CIS_RHEL9_PLAYBOOK_GENERATION.md  DATA_FLOW_DIAGRAM.txt  ENHANCED_THREE_STATUS_SUMMARY.txt  ENVIRONMENTAL_LIMITATIONS_SUMMARY.txt  README.md  RECURSION_FIX_SUMMARY.txt  THREE_STATUS_SUMMARY.txt  TIMEOUT_HANDLING_SUMMARY.txt  TWO_CATEGORY_SUMMARY.txt  all_cis_checkpoints_to_playbooks.py-2026-Feb-01-1100  all_cis_checkpoints_to_playbooks.py-2026-Feb-05-1800  all_cis_checkpoints_to_playbooks.py-2026-Feb-08-2340  ansible-navigator.yml  ansible.cfg  auto_remediation_rhel9_cis_playbook.py  auto_remediation_rhel9_cis_playbook.py-2026-Feb-171000  auto_rhel8_cis_playbook.py  auto_rhel8_cis_playbook.py-2026-Feb-04-1725  auto_rhel8_cis_playbook.py-2026-Feb-04-2030  auto_rhel8_cis_playbook.py-2026-Feb-04-2245  auto_rhel8_cis_playbook.py-2026-Feb-05-1800  auto_rhel8_cis_playbook.py-2026-Feb-07-0930  auto_rhel8_cis_playbook.py-2026-Feb-13-2245  auto_rhel8_cis_playbook.py-2026-Feb-2100  auto_rhel9_cis_playbook.py-2026-Feb-02-2255  auto_rhel9_cis_playbook.py-2026-Feb-10-1430  auto_rhel9_cis_playbook.py-2026-Feb-16-0830  auto_rhel9_cis_playbook.py-2026-Jan-30-0840  auto_rhel9_cis_playbook.py-milestone-01  auto_rhel9_cis_playbook.py-stone-mile-02  cis_audit_1_1_1_1.yml  cis_audit_1_1_1_2.yml  cis_audit_1_1_1_3.yml  cis_audit_1_1_1_4.yml  cis_audit_1_1_1_5.yml  cis_audit_1_1_1_6.yml  (+139 more)
cis_rhel8_scan_playbook/: cis_audit_1_1_1_1.yml  cis_audit_1_1_1_10.yml  cis_audit_1_1_1_11.yml  (+309 more)
tmp/: log01.txt  (+16 more)
(+811 files in other folders)
